@@ -5,6 +5,7 @@ CHANGES
 3.6.1 (unreleased)
 ------------------
 
+- Fixed issue with missing default value for ``strictinsert``.
 
 3.6.0 (2011-08-20)
 ------------------
